Pod-access/access-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: access-middleware
  namespace: access
spec:
  forwardAuth:
    address: http://access-service.default.svc.cluster.local:3000/auth
    # authResponseHeaders:
    #   - X-Auth-User-ID
    #   - X-Auth-Role
    # trustForwardHeader: true
