Pod-access/access-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: access-service
  namespace: access
spec:
  replicas: 1
  selector:
    matchLabels:
      app: access-service
  template:
    metadata:
      labels:
        app: access-service
    spec:
      containers:
        - name: access-service
          image: access-service:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "1000m"
              memory: "1024Mi"
