Pod-access/access-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: access-service
  namespace: access
spec:
  selector:
    app: access-service
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
