Pod-access/access-ingressroutes.yaml
# Route publique pour client-service
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: client-public
  namespace: client
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/client/api`)
      kind: Rule
      priority: 12
      services:
        - name: client-service
          namespace: client
          port: 3001
      middlewares:
        - name: strip-client-api-prefix
          namespace: client
---
# Route publique pour order-service
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: order-public
  namespace: order
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/order/api`)
      kind: Rule
      priority: 12
      services:
        - name: order-service
          namespace: order
          port: 3005
      middlewares:
        - name: strip-order-api-prefix
          namespace: order
---
# Route inter-service pour client-service avec middleware
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: client-verify
  namespace: client
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/client/api/users/verify`)
      kind: Rule
      priority: 12
      services:
        - name: client-service
          namespace: client
          port: 3001
      middlewares:
        - name: strip-client-api-prefix
          namespace: client
        - name: access-middleware
          namespace: access
